Initial awful looking HTML NPC template.

--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -355,3 +355,16 @@ hr.article_divider {
 
 .field_value {
 }
+
+.portrait {
+    padding: 0px;
+    border-radius: 0.5em;
+    border-style: solid;
+    border-width: 1px;
+    text-align: center;
+    /* 2500 x 3235 */
+    width: 100%;
+}
+
+.profile {
+}
