3 NPC PDFs: Tweaks to the HTML template to get PDF conversion to work; author-notes added TEMPORARILY to the main "public" HTML template (REMOVE LATER!!!!!!!)

--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -201,8 +201,13 @@ span{
 		vertical-align: top;
 	}
 	.stat-block.wide{
-		page-break-after: always;
+            // Page breaks seem to break pandoc / wkhtmltopdf.  :(
+            // The rendering is just bleccch.
+// 		page-break-after: always;
 	}
+//     .section-left { page-break-after: always; }
+//     .section-right { page-break-before: always; }
+}
 }
 @media screen and (max-width: 575px){
 	.stat-block{
