--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -32,6 +32,16 @@ span{
   width: 46.5%;
   min-width: 560px;
   text-align: center;
+	
+}
+
+.stat-block.single{
+	display: inline-block;
+  vertical-align: top;
+ vertical-align: top;
+	width: 99%;
+  text-align: left;
+	
 }
 .stat-block.wide .section-left,
 .stat-block.wide .section-right{
