--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -184,6 +184,22 @@ div.nospaces {
   padding: 0 0 10px;
   text-indent: 5px;
 }
+
+
+
+.actions h31{
+  
+  color: #7A200D;
+  font-size: 16px;
+  font-variant: small-caps;
+  font-weight: normal;
+  letter-spacing: 1px;
+  margin-left: 35;
+	margin: 35px 0 0 35;
+  padding: 0 0 10px;
+  text-indent: 15px;
+}
+
 .actions{
   margin: 0 0 20px;
 }
