--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -177,27 +177,23 @@ div.nospaces {
   border-bottom: 1px solid #7A200D;
   color: #7A200D;
   font-size: 21px;
-  font-variant: small-caps;
-  font-weight: normal;
+ font-weight: normal;
   letter-spacing: 1px;
-  margin: 20px 0 0;
-  padding: 0 0 10px;
-  text-indent: 5px;
+   padding: 0 0 0 0;
+  text-indent: 0px;
 }
 
 
 
-.actions h31{
+.actions h5{
   
   color: #7A200D;
   font-size: 16px;
   font-variant: small-caps;
   font-weight: normal;
   letter-spacing: 1px;
-  margin-left: 35;
-	margin: 35px 0 0 35;
-  padding: 0 0 10px;
-  text-indent: 15px;
+   padding: 0 0 0 0;
+  text-indent: 5px;
 }
 
 .actions{
