--- a/npcs/html/stylesheet_experimental.css
+++ b/npcs/html/stylesheet_experimental.css
@@ -18,38 +18,57 @@ body *{
   width: 17%;
   min-width:280px;
   background: #FDF1DC;
-  padding: 5px 10px 20px;
-  box-shadow: 0 0 1.5em #867453;
+  padding: 0px 10px 20px;
+  box-shadow: 0 0 0.5em #867453;
 }
 
 
-span{
-   font-weight: normal;
+.border.before, .border.after {
+    content: "";
+    display: block;
+    background: url(./npc_imgs/stat-bar-book.png) center;
+    background-size: 100% 100%;
+    height: 6px;
+    position: absolute;
+    left: -3px;
+    right: -3px;
 }
 
-div.nospaces {
-      margin: 0;
-      display: inline-block;
-      float: left;
-  }
+
 
 .stat-block.wide{
-  width: 46.5%;
+  width: 55%;
   min-width: 560px;
   text-align: center;
 	
 }
 
-.stat-block.single{
-	display: inline-block;
-  vertical-align: top;
-	width: 99%;
-  text-align: left;
+
+#portrait {
+	position:relative;
+
+	margin: 0 0 0 15px;
+	vertical-align: middle;
+	align-self: flex-end;
+	flex:auto;
+	justify-content: flex-end;
+	
 	
 }
+
+.stat-block.single{
+	display: inline-block;
+  
+	width: 99%;
+  text-align: left;
+	vertical-align: middle;
+	
+}
+
+
 .stat-block.wide .section-left,
 .stat-block.wide .section-right{
-  display: inline-block;
+  display: flex;
   vertical-align: top;
   width: 48%;
   text-align: left;
