--- a/npcs/html_tests/testing_style3.css
+++ b/npcs/html_tests/testing_style3.css
@@ -1,4 +1,3 @@
-
 @charset "utf-8";
 /* CSS Document */
 
@@ -19,7 +18,7 @@ body {
 div {
 	margin: auto;
   	box-sizing: border-box;
- 	width:100%;
+ 	
 	min-width: 640px;
 	display: flex;
 	justify-content: center;
@@ -51,6 +50,17 @@ div p {
 
 
 
+.breaker {
+  display: none;
+}
+.breaker:nth-child(3n) {
+  display: block;
+  width: 100%;
+  height: 0;
+}
+
+
+
 
 .cell {
   display: flex;
@@ -66,20 +76,7 @@ div p {
 
 }
 
-.inner {
-	display: flex;
 
-	justify-content: center;
-  
-  
-  border: 1px solid blue;
-  
-	vertical-align: top;
-	
-	flex-direction: row-reverse;
-
-	
-}
 
 .data {
 		max-width: 75%;
@@ -219,7 +216,7 @@ div p {
 }
 
 .stat-block.single{
-	display: inline-flex;
+	display: inline-block;
   vertical-align: top;
 	width: 99%;
   text-align: left;
@@ -227,7 +224,7 @@ div p {
 }
 .stat-block.wide .section-left,
 .stat-block.wide .section-right{
-  display: inline-flex;
+  display: inline-block;
   vertical-align: top;
   width: 48%;
   text-align: left;
@@ -290,19 +287,19 @@ div p {
 
 
 
-
 @media only screen and (max-width: 640px) {
   
-  #cell2 {
-    flex-direction: row;
-    position: static;
+  #cellpic {
+    flex-direction: column;
+    position:relative;
+	 
     height: 100px;
   }
   
-  #cell4 { display: none; }
+  
   
   .container { 
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     display: flex;
   }
@@ -312,26 +309,32 @@ div p {
   }
 }
 
-@media only screen and (min-width: 640px) and (max-width: 1024px) {
+
+
+@media only screen and (min-width: 640px) and (max-width: 2900px) {
   .container {
     position: relative;
   }
   
-  #cell1 { 
+#data {
+    
+    right: 10px;
+    position: relative;
+    max-width: auto;
+    height: calc(100% - 20px);
+  }	
+	
+	
+  #cellpic { 
+	flex-direction: row-reverse;
     flex: 0 0 66%; 
   }
   
-  #cell2 {
-    flex-direction: column;
-    right: 10px;
-    position: absolute;
-    width: 33%;
-    height: calc(100% - 20px);
+  
+  .cell { 
+    flex: 100%; 
   }
   
-  #cell3 { 
-    flex:  0 0 66%; 
-  }
   
-  #cell4 { display: none;}
+  
 }
