--- a/npcs/html_tests/testing_style_2.css
+++ b/npcs/html_tests/testing_style_2.css
@@ -1,4 +1,3 @@
-
 @charset "utf-8";
 /* CSS Document */
 
@@ -15,22 +14,6 @@ body {
 
 
 
-
-div {
-	margin: auto;
-  	box-sizing: border-box;
- 	width:100%;
-	min-width: 640px;
-	display: flex;
-	justify-content: center;
-	
-}
-
-
-
-div p {
-  text-align: left;
-}
 
 
 
@@ -51,6 +34,17 @@ div p {
 
 
 
+.breaker {
+  display: none;
+}
+.breaker:nth-child(3n) {
+  display: block;
+  width: 100%;
+  height: 0;
+}
+
+
+
 
 .cell {
   display: flex;
@@ -66,20 +60,7 @@ div p {
 
 }
 
-.inner {
-	display: flex;
 
-	justify-content: center;
-  
-  
-  border: 1px solid blue;
-  
-	vertical-align: top;
-	
-	flex-direction: row-reverse;
-
-	
-}
 
 .data {
 		max-width: 75%;
@@ -197,13 +178,103 @@ div p {
   line-height: 1.4em;
 }
 .property-line.first{
-  margin: 0px 0 0
+  margin: 0px 0 0;
 }
 .property-line.last{
   margin: 0 0 10px;
 }
 
 
+.property-block {
+	
+text-align: left;	
+	padding: 0 0 0 10px;	
+}
+
+
+
+.property-block h4,
+.property-block p{
+  font-size: 13.5px;
+  line-height: 1.2em;
+  display: flex;
+  margin: 0;
+	padding: 0 0 0 10px;
+	
+}
+.property-block h4{
+  font-style: italic;
+}
+.property-block{
+  padding: 10px 2px 0;
+}
+.actions h3{
+  border-bottom: 1px solid #7A200D;
+  color: #7A200D;
+  font-size: 21px;
+ font-weight: normal;
+  letter-spacing: 1px;
+   padding: 0 0 0 10px;
+  text-indent: 10px;
+}
+
+
+
+.actions h5{
+  
+  color: #7A200D;
+  font-size: 16px;
+  font-variant: small-caps;
+  font-weight: normal;
+  letter-spacing: 1px;
+   padding: 0 0 0 0;
+  text-indent: 0px;
+}
+
+.actions{
+  margin: 0 0 0 0px;
+}
+.actions:last-child{
+  margin: 0;
+}
+
+@media print{
+	.orange-border{
+		display: none;
+	}
+	.stat-block,
+	.stat-block.wide, 
+	.stat-block.wide .section-left,
+	.stat-block.wide .section-right,
+	.property-line,
+	.property-block{
+		width: 100%;
+		display: block;
+	}
+	.stat-block.wide .section-left{
+	  margin: 0;
+	}
+	.stat-block.wide .section-right{
+	  margin: 0;
+	}
+	.stat-block{
+		width: 40%;
+		display: inline-block;
+		vertical-align: top;
+	}
+	.stat-block.wide{
+            
+		page-break-after: always;
+	}
+     .section-left { page-break-after: always; }
+     .section-right { page-break-before: always; }
+}
+
+@media screen and (max-width: 575px){
+	.stat-block{
+		margin: 20px 0;
+	}
+}
 
 
 
@@ -219,7 +290,7 @@ div p {
 }
 
 .stat-block.single{
-	display: inline-flex;
+	display: inline-block;
   vertical-align: top;
 	width: 99%;
   text-align: left;
@@ -227,7 +298,8 @@ div p {
 }
 .stat-block.wide .section-left,
 .stat-block.wide .section-right{
-  display: inline-flex;
+  display: flex;
+
   vertical-align: top;
   width: 48%;
   text-align: left;
@@ -290,19 +362,19 @@ div p {
 
 
 
-
 @media only screen and (max-width: 640px) {
   
-  #cell2 {
-    flex-direction: row;
-    position: static;
+  #cellpic {
+    flex-direction: column;
+    position:relative;
+	 
     height: 100px;
   }
   
-  #cell4 { display: none; }
+  
   
   .container { 
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     display: flex;
   }
@@ -312,26 +384,32 @@ div p {
   }
 }
 
-@media only screen and (min-width: 640px) and (max-width: 1024px) {
+
+
+@media only screen and (min-width: 640px) and (max-width: 2900px) {
   .container {
     position: relative;
   }
   
-  #cell1 { 
+#data {
+    
+    right: 10px;
+    position: relative;
+    max-width: auto;
+    height: calc(100% - 20px);
+  }	
+	
+	
+  #cellpic { 
+	flex-direction: row-reverse;
     flex: 0 0 66%; 
   }
   
-  #cell2 {
-    flex-direction: column;
-    right: 10px;
-    position: absolute;
-    width: 33%;
-    height: calc(100% - 20px);
+  
+  .cell { 
+    flex: 100%; 
   }
   
-  #cell3 { 
-    flex:  0 0 66%; 
-  }
   
-  #cell4 { display: none;}
+  
 }
