--- a/npcs/html_tests/testing_style_back_to_beginning.css
+++ b/npcs/html_tests/testing_style_back_to_beginning.css
@@ -373,7 +373,7 @@ div p {
 	min-width: 300;
   }
 	
-	.#cell4 {
+	#cell4 {
 		
 		display:none
 	}
@@ -416,7 +416,7 @@ div p {
     
   }
 	
-	.#cell4 {
+	#cell4 {
 		
 		display:none
 	}
@@ -450,7 +450,7 @@ div p {
     
   }
 	
-	.#cell4 {
+	#cell4 {
 		
 		display:none
 	}
