--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -361,7 +361,7 @@ div p {
 	}	
 	
   #cell2 {
-    flex-direction: column-reverse;
+    flex-direction: column;
     position: relative;
     
 	min-width: 620px;
@@ -405,7 +405,7 @@ div p {
 	}	
   
   #cell2 {
-    flex-direction: column-reverse;
+    flex-direction: column;
     
     position: relative;
     min-width: 620px;
