--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -60,7 +60,7 @@ div p {
   border: 1px solid blue;
   
 	
-	
+	flex-wrap: wrap;
 	flex-direction: row;
 
 }
@@ -354,7 +354,11 @@ max-width: 620px;
 	
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (min-width: 0) and (max-width: 640px) {
+  .container {
+	  flex-direction: column;
+    position: relative;
+  }
   
 	#cell1{
 		display: none;
@@ -394,7 +398,7 @@ max-width: 620px;
 }
 
 
-@media only screen and (min-width: 640px) and (max-width: 1024px) {
+@media only screen and (min-width: 640px) and (max-width: 1280px) {
   .container {
 	  flex-direction: column;
     position: relative;
@@ -428,7 +432,7 @@ max-width: 620px;
 }
 
 
-@media only screen and (min-width: 1024px) and (max-width: 1920px) {
+@media only screen and (min-width: 1280px) and (max-width: 1920px) {
   .container {
 	  flex-direction: column;
     position: relative;
