--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -14,8 +14,9 @@ body {
 
 
 
-
 div {
+	flex-basis:auto;
+	flex-grow:1;
 	margin: auto;
   	box-sizing: border-box;
  	width:auto;
@@ -51,13 +52,16 @@ div p {
 
 
 .cell {
-  display: flex;
+  
+	display: flex;
 
-	align-content:space-between;
+	align-content:center;
 	align-items:center;
   
   border: 1px solid blue;
   
+	flex-basis: 500px;
+	flex-grow:1;
 	
 	flex-wrap:wrap;
 	flex-direction: row;
@@ -68,6 +72,35 @@ div p {
 
 .cell1{
 	display: flex;
+	flex: 1;
+	align-content:flex-start;
+	align-items:center;
+  
+  border: 1px solid blue;
+  
+	
+	flex-wrap: wrap;
+	flex-direction: column;
+}
+
+.cell2{
+	display: flex;
+	flex-basis:auto;
+	flex-grow:1;
+	flex: 1;
+	align-content:flex-start;
+	align-items:center;
+  
+  border: 1px solid blue;
+  
+	
+	flex-wrap: wrap;
+	flex-direction: column;
+}
+.cell3{
+	display: flex;
+	flex-basis:auto;
+	flex-grow:1;
 	flex: 1;
 	align-content:flex-start;
 	align-items:center;
@@ -158,6 +191,7 @@ div p {
 	
 	min-width: 400px;
 	display: flex;
+	flex-grow: 1;
 
 }
 
@@ -183,6 +217,7 @@ div p {
   font-size: 12px;
   line-height: 1.2em;
   margin: 0 0 0 10px;
+
 }
 
 
@@ -192,6 +227,7 @@ div p {
 }
 .abilities > span{
   display: inline-block;
+	text-align: center;
   vertical-align: middle;
   width: 15.5%;
   min-width: 40px; 
@@ -278,10 +314,13 @@ div p {
   vertical-align: top;
   width: 48%;
   text-align: left;
+	display: flex;
+	
 	
 }
 .stat-block.wide .section-left{
   margin-right: 1.5%;
+	flex-grow: 1;
 }
 .stat-block.wide .section-right{
   margin-left: 1.5%;
@@ -301,6 +340,7 @@ div p {
 
 .npc-heading {
 	
+	flex-grow: 1;
 	display: inline-block;
 	
 	min-width: 250px;
@@ -343,8 +383,8 @@ div p {
   stroke: #922610;
 }
 
-.cell1 {
-	
+.cell2 {
+	flex-grow:1;
 	
 }
 
@@ -392,6 +432,7 @@ max-width: 620px;
   .container {
 	  flex-direction: column;
     position: relative;
+	
   }
   
 	#cell1{
@@ -408,9 +449,11 @@ max-width: 620px;
   
  
 	#cell3 {
-    flex-direction: column;
+    
+		
+		flex-direction: column;
     position: relative;
-   
+  
 	min-width:620px;
   }
 	
@@ -420,11 +463,7 @@ max-width: 620px;
 	}
 	
 	
-  .container { 
-    flex-direction: column;
-    flex-wrap: wrap;
-    display: flex;
-  }
+  
   
   .cell { 
     flex: 100%; 
@@ -454,6 +493,7 @@ max-width: 620px;
 #cell3 {
     flex-direction: column;
     position: relative;
+	flex-basis: auto;
     
   }
 	
