--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -384,7 +384,6 @@ div p {
 
 .cell2 {
 	flex-grow:1;
-	flex-direction: column-reverse;
 	
 }
 
@@ -491,7 +490,7 @@ max-width: 620px;
 #cell3 {
     flex-direction: column;
     position: relative;
-	
+	flex-basis: auto;
     
   }
 	
@@ -518,7 +517,9 @@ max-width: 620px;
     flex-direction: row;
     flex: 1;
     position: relative;
-    
+     
+    align-content:flex-start;
+	  align-items: flex-start;
   }
   
 	
